src/objects/WTB_Service_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Where To Buy service custom settings</description>
    <fields>
        <fullName>Geo_Code_URL__c</fullName>
        <description>Google Geo Code API URL for getting coordinates of given address</description>
        <label>Geo Code URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <description>Default Locale for searching stores</description>
        <label>Locale</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Results__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Total number of results returned in one request</description>
        <label>Num Results</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <description>Default radius for getting nearest stores for given coordinates</description>
        <label>Radius</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTB_API_User_Id__c</fullName>
        <description>User id for WTB API user to authenticate the service request from authorized user</description>
        <label>WTB API User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTB_API_User_Value__c</fullName>
        <description>Value of WTB API user Id to authenticate the user</description>
        <label>WTB API User Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>WTB Service Settings</label>
</CustomObject>